[metadata]
name = ShodanExtractor
description = Shodan data extractor
license = MIT
license_files =
    =LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3.11

[options]
packages = 
    ShodanExtractor
install_requires = 
    click
    pandas
    requests
    openpyxl
    c99api
    ipaddress
    
zip_safe = no
python_requires = >= 3.10
package_dir =
    =src

[options.packages.find]
where=src

[options.extras_require]
testing = 
    pytest
    pytest-cov
    mypy
    flake8
    tox

[options.package_data]
yellowfarm = py.typed

[flake8]
max-line-length = 160